fix: grid spacing

--- a/assets/styles/common/_grid.scss
+++ b/assets/styles/common/_grid.scss
@@ -15,6 +15,8 @@
 }
 
 .main-container {
+  padding-left: 0;
+  padding-right: 0;
   min-height: calc(100vh - #{$layout-desktop-header-height});
   max-width: $container-max-width;
 
